--- a/webview-ui/src/i18n/locales/en/chat.json
+++ b/webview-ui/src/i18n/locales/en/chat.json
@@ -64,7 +64,7 @@
 		}
 	},
 	"runCommand": {
-		"title": "Run Command",
+		"title": "Run",
 		"tooltip": "Execute this command"
 	},
 	"proceedWhileRunning": {
@@ -72,7 +72,7 @@
 		"tooltip": "Continue despite warnings"
 	},
 	"killCommand": {
-		"title": "Kill Command",
+		"title": "Kill",
 		"tooltip": "Kill the current command"
 	},
 	"resumeTask": {
@@ -164,39 +164,39 @@
 		"wantsToFetch": "Roo wants to fetch detailed instructions to assist with the current task"
 	},
 	"fileOperations": {
-		"wantsToRead": "Roo wants to read this file:",
-		"wantsToReadMultiple": "Roo wants to read multiple files:",
-		"wantsToReadAndXMore": "Roo wants to read this file and {{count}} more:",
-		"wantsToReadOutsideWorkspace": "Roo wants to read this file outside of the workspace:",
-		"didRead": "Roo read this file:",
-		"wantsToEdit": "Roo wants to edit this file:",
-		"wantsToEditOutsideWorkspace": "Roo wants to edit this file outside of the workspace:",
-		"wantsToEditProtected": "Roo wants to edit a protected configuration file:",
-		"wantsToApplyBatchChanges": "Roo wants to apply changes to multiple files:",
-		"wantsToCreate": "Roo wants to create a new file:",
-		"wantsToSearchReplace": "Roo wants to search and replace in this file:",
-		"didSearchReplace": "Roo performed search and replace on this file:",
-		"wantsToInsert": "Roo wants to insert content into this file:",
-		"wantsToInsertWithLineNumber": "Roo wants to insert content into this file at line {{lineNumber}}:",
-		"wantsToInsertAtEnd": "Roo wants to append content to the end of this file:"
+		"wantsToRead": "Read",
+		"wantsToReadMultiple": "Read files",
+		"wantsToReadAndXMore": "Read and {{count}} more",
+		"wantsToReadOutsideWorkspace": "Read this file outside",
+		"didRead": "Read",
+		"wantsToEdit": "Edit",
+		"wantsToEditOutsideWorkspace": "Edit outside of the workspace",
+		"wantsToEditProtected": "Edit protected file",
+		"wantsToApplyBatchChanges": "Apply to multiple files",
+		"wantsToCreate": "Create",
+		"wantsToSearchReplace": "Search and replace",
+		"didSearchReplace": "Roo performed search and replace on this file",
+		"wantsToInsert": "Insert",
+		"wantsToInsertWithLineNumber": "Insert at line {{lineNumber}}",
+		"wantsToInsertAtEnd": "Append"
 	},
 	"directoryOperations": {
-		"wantsToViewTopLevel": "Roo wants to view the top level files in this directory:",
-		"didViewTopLevel": "Roo viewed the top level files in this directory:",
-		"wantsToViewTopLevelOutsideWorkspace": "Roo wants to view the top level files in this directory (outside workspace):",
-		"didViewTopLevelOutsideWorkspace": "Roo viewed the top level files in this directory (outside workspace):",
-		"wantsToViewRecursive": "Roo wants to recursively view all files in this directory:",
-		"didViewRecursive": "Roo recursively viewed all files in this directory:",
-		"wantsToViewRecursiveOutsideWorkspace": "Roo wants to recursively view all files in this directory (outside workspace):",
-		"didViewRecursiveOutsideWorkspace": "Roo recursively viewed all files in this directory (outside workspace):",
-		"wantsToViewDefinitions": "Roo wants to view source code definition names used in this directory:",
-		"didViewDefinitions": "Roo viewed source code definition names used in this directory:",
-		"wantsToViewDefinitionsOutsideWorkspace": "Roo wants to view source code definition names used in this directory (outside workspace):",
-		"didViewDefinitionsOutsideWorkspace": "Roo viewed source code definition names used in this directory (outside workspace):",
-		"wantsToSearch": "Roo wants to search this directory for <code>{{regex}}</code>:",
-		"didSearch": "Roo searched this directory for <code>{{regex}}</code>:",
-		"wantsToSearchOutsideWorkspace": "Roo wants to search this directory (outside workspace) for <code>{{regex}}</code>:",
-		"didSearchOutsideWorkspace": "Roo searched this directory (outside workspace) for <code>{{regex}}</code>:"
+		"wantsToViewTopLevel": "View",
+		"didViewTopLevel": "View",
+		"wantsToViewTopLevelOutsideWorkspace": "View (outside workspace)",
+		"didViewTopLevelOutsideWorkspace": "View (outside workspace)",
+		"wantsToViewRecursive": "View files",
+		"didViewRecursive": "View",
+		"wantsToViewRecursiveOutsideWorkspace": "View files (outside workspace)",
+		"didViewRecursiveOutsideWorkspace": "Roo recursively viewed all files in this directory (outside workspace)",
+		"wantsToViewDefinitions": "View source code definition names used in this directory",
+		"didViewDefinitions": "Roo viewed source code definition names used in this directory",
+		"wantsToViewDefinitionsOutsideWorkspace": "View (outside workspace)",
+		"didViewDefinitionsOutsideWorkspace": "View (outside workspace)",
+		"wantsToSearch": "Search <code>{{regex}}</code>",
+		"didSearch": "Search <code>{{regex}}</code>",
+		"wantsToSearchOutsideWorkspace": "Search (outside workspace) for <code>{{regex}}</code>",
+		"didSearchOutsideWorkspace": "Search (outside workspace) for <code>{{regex}}</code>"
 	},
 	"codebaseSearch": {
 		"wantsToSearch": "Roo wants to search the codebase for <code>{{query}}</code>:",
